[project]
name = "repo-investigater"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "reizist", email = "reizist@gmail.com" }
]
dependencies = [
    "langchain>=0.0.27",
    "openai>=0.27.8",
    "chromadb>=0.4.6",
    "tiktoken>=0.4.0",
    "GitPython>=3.1.32",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pysen>=0.10.5",
]

[tool.hatch.metadata]
allow-direct-references = true
